--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@next/font": "^14.2.13",
+    "@next/third-parties": "^14.2.14",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.445.0",
-    "next": "14.2.13",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
