--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
   "dependencies": {
     "@next/font": "^14.2.13",
     "@next/third-parties": "^14.2.14",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "embla-carousel-react": "^8.3.0",
+    "hero-slider": "^3.2.1",
     "lucide-react": "^0.445.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "shadcn-ui": "^0.9.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -29,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
